--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="สร้างคำคมออนไลน์ง่ายๆ ไม่ต้องลงโปรแกรมใดๆ โดยสามารถตกแต่งคำต่างๆ ผ่านหน้าเว็บไซต์และดาวน์โหลดมาเก็บไว้ใช้งานได้ฟรี">
+    <meta name="author" content="bowswoy">
     <title>สร้างคำคมออนไลน์ ป้ายคำคมออนไลน์ กลอนสั้นๆ คำคม สวัสดีตอนเช้า</title>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
